Feature/pn 10813 (#917)
* PN-10810: modifiche propedeutiche

* PN-10810: update timeline event

* PN-10813: Modifiche a recupero attachments

* PN-10813: update

* PN-10813: update F24ResolutionMode

* PN-10813: update javadoc

* PN-10813: update javadoc